Fixed position dates on mobile.

--- a/_less/seg_resume.less
+++ b/_less/seg_resume.less
@@ -170,7 +170,6 @@ tfoot { display:table-footer-group; }
     }
     .dates{
       font-size:9pt;
-      float:right;
     }
   }
 }
